--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Bluetooth</string>
+    <string name="on">ON</string>
+    <string name="off">OFF</string>
 </resources>
